# spotify_analytics

./: .gitignore  README.md
spotify_analytics/: Makefile  README.md  config.py  etl_audio_features.py  etl_recently_played.py  pyproject.toml  requirements.txt  spotify_client.py
spotify_analytics/notebooks/: config.py  etl_audio_features.py  etl_recently_played.py  etl_runner.ipynb  listening_sessions.ipynb
spotify_analytics/sql/: peak_mood_hour.sql  queries.sql  schema.sql  top_artists.sql
