[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotify_analytics"
version = "0.0.1"
description = "an analysis of spotify listening patterns"
authors = [
  { name = "mason" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["spotify_analytics"]
include = ["pyproject.toml", "spotify_analytics/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spotify_analytics"]
force-sort-within-sections = true

